syntax = "proto3";

option go_package = "/TestMicroProto;TestMicroProto";

service TestService {
    rpc SayHello(SayHelloReq) returns (SayHelloRsp) {}
}

message SayHelloReq {
    string name = 1;
}

message SayHelloRsp {
    string msg = 1;
}